2002-05-28  Maciej Stachowiak  <mjs@apple.com>

	* THANKS: Demangled.

=== Alexander-7 ===

2002-05-24  Maciej Stachowiak  <mjs@apple.com>

	Added license and acknowledgements.

	* AUTHORS: Added.
	* COPYING.LIB: Added.
	* THANKS: Added.

=== 0.3 ===

=== Alexander-6 ===

=== Alexander-5 ===

=== Alexander-4 ===

=== JavaScriptCore-5 ===

2002-05-21  Maciej Stachowiak  <mjs@apple.com>

	Reviewed by: Richard Williamson

	Fixed Radar 2928775 - Sherlock crashes sitting in stocks channel

	* kjs/internal.cpp:
	(InterpreterImp::InterpreterImp): Set the interp pointer earlier,
	in case garbage collection takes place while creating the global
	values.

2002-05-15  Darin Adler  <darin@apple.com>

	Reviewed by: Maciej Stachowiak
	
	* Makefile.am:
	Use all-am and clean-am instead of all and clean because it's better and
	to make "make check" at the top level work right.

2002-05-13  Darin Adler  <darin@apple.com>

	Reviewed by: Maciej Stachowiak

	* kjs/value.h: Fix comment typos.

=== JavaScriptCore-4 ===

2002-05-10  Maciej Stachowiak  <mjs@apple.com>

	Reviewed by: Ken Kocienda and Darin Adler

	Fixed the following bug:

	Radar 2890573 - JavaScriptCore needs to be thread-safe

	Actually this is only a weak form of thread-safety - you can safely
	use different interpreters from different threads at the same
	time. If you try to use a single interpreter object from multiple
	threads, you need to provide your own locking.

	* kjs/collector.h, kjs/collector.cpp:
	(Collector::lock, Collector::unlock): Trivial implementation of a
	recursive mutex.
	(Collector::allocate): Lock around the body of this function.
	(Collector::collect): Likewise.
	(Collector::finalCheck): Likewise.
	(Collector::numInterpreters): Likewise.
	(Collector::numGCNotAllowedObjects): Likewise.
	(Collector::numReferencedObjects): Likewise.
	* kjs/internal.cpp:
	(Parser::parse): use a mutex to lock around the whole parse, since
	it uses a bunch of global state.