@@ -1,5 +1,3 @@
-NULL =
-
 YACCFLAGS = -d --output-file=grammar.cpp --file-prefix=grammar --name-prefix=kjsyy
 
 GRAMMAR_FILES = grammar.h grammar.cpp.h grammar.cpp
@@ -7,9 +5,7 @@ GRAMMAR_FILES = grammar.h grammar.cpp.h grammar.cpp
 $(GRAMMAR_FILES): grammar-stamp
 
 grammar-stamp: grammar.y
-	$(YACC) $(YACCFLAGS) $<
-	cp -f grammar.cpp.h grammar.h
-	touch $@
+	$(YACC) $(YACCFLAGS) $< && cp -f grammar.cpp.h grammar.h && touch $@
 
 LUT_FILES = math_object.lut.h lexer.lut.h array_object.lut.h date_object.lut.h string_object.lut.h number_object.lut.h
 
